# crm-test-integration

./: .env.example  DEPLOY_INTEGRATION.md  MAINTENANCE.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docs/: API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  DATABASE_DOCUMENTATION.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_DETAILED.md  (+1 more)
internship-parser/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  Taskfile.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
internship-parser/ETL/: clear_db.py  loader.py  logging_config.py
internship-parser/ETL/data/parsed/: alfabank.json  beeline.json  kontur.json  mts.json  ozon.json  rostelekom.json  t-bank.json  vk.json  yandex.json
internship-parser/ETL/data/transformed/: alfabank.json  beeline.json  kontur.json  mts.json  ozon.json  rostelekom.json  t-bank.json  vk.json  yandex.json
internship-parser/ETL/parsers/: alfabank.py  beeline.py  kontur.py  mts.py  naumen.py  ozon.py  rostelekom.py  t-bank.py  vk.py  yandex.py
internship-parser/ETL/transforms/: __init__.py  alfabank.py  base.py  beeline.py  kontur.py  mts.py  naumen.py  ozon.py  rostelekom.py  run_transformers.py  tbank.py  vk.py  yandex.py
internship-parser/airflow/: Dockerfile  requirements.txt
internship-parser/airflow/dags/: internships_etl.py
internship-parser/app/: README.md  main.py  schemas.py
internship-parser/app/api/routes/: __init__.py  internships.py
internship-parser/models/: internship.py
internship-parser/utils/: config.py  export.py  internships_db.py
(+385 files in other folders)
