[tool.poetry]
name = "internship-parser"
version = "0.1.0"
description = "Парсер IT стажировок России"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
sqlalchemy = ">=2.0.31,<2.1"
psycopg2-binary = "2.9.12"
python-dotenv = "1.0.0"
requests = "2.31.0"
curl-cffi = "^0.7.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
